// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Book renders base form when props.editForm is false 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="author"
    >
      Author
    </label>
    <input
      class="form-control"
      id="author"
      name="author"
      placeholder="Kurt Vonnagut"
      type="text"
      value="asdf"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="title"
    >
      Title
    </label>
    <input
      class="form-control"
      id="title"
      name="title"
      placeholder="Slaughterhouse-Five"
      type="text"
      value="asdf"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="numberInSeries"
    >
      Number in series
    </label>
    <input
      class="form-control"
      id="numberInSeries"
      name="numberInSeries"
      type="number"
      value="1"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      name="category"
      type="text"
      value="asdf"
    />
    <datalist
      data-test-id="categories"
      id="categories"
    >
      <option
        value="asdf"
      />
    </datalist>
  </div>
</div>
`;

exports[`Book renders edit form when props.editForm is true 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="author"
    >
      Author
    </label>
    <input
      class="form-control"
      id="author"
      name="author"
      placeholder="Kurt Vonnagut"
      type="text"
      value="asdf"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="title"
    >
      Title
    </label>
    <input
      class="form-control"
      id="title"
      name="title"
      placeholder="Slaughterhouse-Five"
      type="text"
      value="asdf"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="numberInSeries"
    >
      Number in series
    </label>
    <input
      class="form-control"
      id="numberInSeries"
      name="numberInSeries"
      type="number"
      value="1"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      name="category"
      type="text"
      value="asdf"
    />
    <datalist
      data-test-id="categories"
      id="categories"
    >
      <option
        value="asdf"
      />
    </datalist>
  </div>
  <div
    class="mb-3 row"
  >
    <div
      class="form-check-inline ms-1 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="purchased"
          name="purchased"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="purchased"
          title=""
        >
          Purchased
        </label>
      </div>
    </div>
    <div
      class="form-check-inline mb-3"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="read"
          name="read"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="read"
          title=""
        >
          Read
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Book renders with defaults 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="author"
    >
      Author
    </label>
    <input
      class="form-control"
      id="author"
      name="author"
      placeholder="Kurt Vonnagut"
      type="text"
      value="asdf"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="title"
    >
      Title
    </label>
    <input
      class="form-control"
      id="title"
      name="title"
      placeholder="Slaughterhouse-Five"
      type="text"
      value="asdf"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="numberInSeries"
    >
      Number in series
    </label>
    <input
      class="form-control"
      id="numberInSeries"
      name="numberInSeries"
      type="number"
      value="0"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      name="category"
      type="text"
      value=""
    />
    <datalist
      data-test-id="categories"
      id="categories"
    />
  </div>
</div>
`;
